[package]
name = "adxl345_driver"
version = "0.0.7"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
description = "Driver for Analog Device ADXL345/ADXL346 3-Axis Digital Accelerometer"
edition = "2018"
keywords = ["adxl345", "embedded", "pi", "raspberry", "driver"]
categories = ["embedded", "hardware-support", "os"]
license = "MIT"
homepage = "https://github.com/Dragonrun1/adxl345_driver"
readme = "README.md"
repository = "https://github.com/Dragonrun1/adxl345_driver"

[dependencies]
bitflags = "1.3.2"
c2rust-bitfields = "0.3.0"
thiserror = "1.0.32"
embedded-hal = "=1.0.0-alpha.7"
#embedded-hal = "=1.0.0-alpha.8"

[dev-dependencies]
anyhow = "1.0.61"
ctrlc = { version = "3.2.2", features = ["termination"] }
#XXX: latest rppal release 0.13 doesn't support embedded-hal 1.0, which we need. Go with unreleased version for now.
rppal = { git = "https://github.com/golemparts/rppal.git", rev = "54e54cbe17293044eaf77bc599631c0ecc572f91", features = ["hal"] }
