[package]
name = "adxl345_driver"
version = "0.0.7"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
description = "Driver for Analog Device ADXL345/ADXL346 3-Axis Digital Accelerometer"
edition = "2018"
keywords = ["adxl345", "embedded", "pi", "raspberry", "driver"]
categories = ["embedded", "hardware-support", "os"]
license = "MIT"
homepage = "https://github.com/Dragonrun1/adxl345_driver"
readme = "README.md"
repository = "https://github.com/Dragonrun1/adxl345_driver"

[dependencies]
bitflags = "1.3.2"
c2rust-bitfields = "0.3.0"
rppal = { version = "0.11.3", features = ["hal", "hal-unproven"] }
thiserror = "1.0.32"

[dev-dependencies]
anyhow = "1.0.61"
ctrlc = { version = "3.2.2", features = ["termination"] }
